# notification_distributed_notification_service

./: AGENTS.md  BUILD.gn  CODEOWNERS  bundle.json  hisysevent.yaml  hisysevent_notification_ue.yaml  noti.diff  notification.gni  test213
frameworks/ans/: BUILD.gn  IAnsDialogCallback.idl  IAnsManager.idl  IAnsOperationCallback.idl  IAnsResultDataSynchronizer.idl  IAnsSubscriber.idl  IAnsSubscriberLocalLiveView.idl  IBadgeQueryCallback.idl  ISwingCallBack.idl  libans_innerkits.map
frameworks/ans/src/: ans_dialog_host_client.cpp  badge_number_callback_data.cpp  distributed_bundle_option.cpp  distributed_notification_bundle_info.cpp  enabled_notification_callback_data.cpp  enabled_priority_notification_by_bundle_callback_data.cpp  enabled_silent_reminder_callback_data.cpp  large_info_container.cpp  message_user.cpp  notification.cpp  notification_action_button.cpp  notification_application_change_info.cpp  notification_basic_content.cpp  notification_bundle_option.cpp  notification_button_option.cpp  notification_capsule.cpp  notification_check_info.cpp  notification_check_request.cpp  notification_classification.cpp  notification_constant.cpp  notification_content.cpp  notification_conversational_content.cpp  notification_conversational_message.cpp  notification_disable.cpp  notification_distributed_bundle.cpp  notification_distributed_options.cpp  notification_do_not_disturb_date.cpp  notification_do_not_disturb_profile.cpp  notification_extension_subscription_info.cpp  notification_flags.cpp  notification_geofence.cpp  notification_group_info.cpp  notification_helper.cpp  notification_icon_button.cpp  notification_live_view_content.cpp  notification_local_live_view_button.cpp  notification_local_live_view_content.cpp  notification_local_live_view_subscriber.cpp  notification_long_text_content.cpp  notification_media_content.cpp  (+35 more)
frameworks/cj/ffi/: BUILD.gn
frameworks/core/: BUILD.gn
frameworks/core/include/: ans_badgequery_listener.h  ans_callback_interface.h  ans_callback_stub.h  ans_dialog_callback_interface.h  ans_dialog_callback_proxy.h  ans_dialog_callback_stub.h  ans_image_util.h  ans_manager_death_recipient.h  ans_manager_interface.h  ans_manager_proxy.h  ans_manager_stub.h  ans_notification.h  ans_operation_callback_interface.h  ans_operation_callback_proxy.h  ans_operation_callback_stub.h  ans_result_data_synchronizer.h  ans_subscriber_interface.h  ans_subscriber_listener.h  ans_subscriber_local_live_view_interface.h  ans_subscriber_local_live_view_proxy.h  ans_subscriber_local_live_view_stub.h  ans_subscriber_proxy.h  ans_subscriber_stub.h  dialog_status_data.h  distributed_notification_service_ipc_interface_code.h  hitrace_meter_adapter.h  hitrace_util.h  image_pixelmap_helper.h  pixelmap_cache_manager.h  subscriber_image_util.h  swing_callback_interface.h  swing_callback_proxy.h  swing_callback_service.h  swing_callback_stub.h
frameworks/core/src/: ans_callback_stub.cpp  ans_image_util.cpp  ans_manager_death_recipient.cpp  ans_manager_proxy.cpp  ans_manager_proxy_disturb.cpp  ans_manager_proxy_reminder.cpp  ans_manager_proxy_slot.cpp  ans_manager_proxy_subscribe.cpp  ans_manager_proxy_utils.cpp  ans_manager_stub.cpp  ans_manager_stub_invalid.cpp  ans_notification.cpp  ans_result_data_synchronizer.cpp  ans_subscriber_listener.cpp  ans_subscriber_local_live_view_proxy.cpp  ans_subscriber_local_live_view_stub.cpp  ans_subscriber_proxy.cpp  ans_subscriber_stub.cpp  dialog_status_data.cpp  hitrace_util.cpp  image_pixelmap_helper.cpp  pixelmap_cache_manager.cpp  subscriber_image_util.cpp  swing_callback_stub.cpp
frameworks/ets/ani/: BUILD.gn  libnotification_ani_common.map  libnotification_manager_ani.map  libnotification_subscribe_ani.map  libnotification_subscriber_extension_ani.map  libnotificationextensionsubscription_ani.map
frameworks/ets/ets/: @ohos.application.NotificationSubscriberExtensionAbility.ets  @ohos.application.NotificationSubscriberExtensionContext.ets  @ohos.notificationExtensionSubscription.ets  @ohos.notificationManager.ets  @ohos.notificationSubscribe.ets  BUILD.gn
frameworks/extension/: BUILD.gn  INotificationSubscriber.idl
frameworks/extension/include/: notification_extension_content.h  notification_info.h  notification_subscriber_extension.h  notification_subscriber_extension_context.h  notification_subscriber_stub_impl.h
frameworks/extension/src/: notification_extension_content.cpp  notification_info.cpp  notification_subscriber_extension.cpp  notification_subscriber_extension_context.cpp  notification_subscriber_stub_impl.cpp
frameworks/js/napi/: BUILD.gn  libnotification.map  libnotification_napi_common.map
frameworks/reminder/: BUILD.gn  IReminderAgentService.idl  IReminderService.idl  IReminderStateCallback.idl
frameworks/reminder/src/: reminder_helper.cpp  reminder_request.cpp  reminder_request_adaptation.cpp  reminder_request_alarm.cpp  reminder_request_calendar.cpp  reminder_request_client.cpp  reminder_request_factory.cpp  reminder_request_timer.cpp  reminder_service_load_callback.cpp  reminder_state.cpp  reminder_state_callback_proxy_ext.cpp
frameworks/reminder_ani/: BUILD.gn
frameworks/reminder_ani/idl/: ohos.reminderAgentManager.manager.taihe  ohos.reminderAgentManager.taihe
frameworks/reminder_ani/include/: reminder_ani_common.h
frameworks/reminder_ani/src/: ani_constructor.cpp  ohos.reminderAgentManager.impl.cpp  reminder_ani_common.cpp
frameworks/test/moduletest/: BUILD.gn  ReminderHelperTest.js  ans_fw_module_test.cpp  ans_innerkits_module_publish_test.cpp  ans_innerkits_module_setting_test.cpp  ans_innerkits_module_slot_test.cpp  config.json
interfaces/ndk/: BUILD.gn
interfaces/ndk/include/: notification.h
interfaces/ndk/src/: notification.cpp
services/ans/: BUILD.gn  BUILD.gn.orig  libans.map
services/ans/include/: access_token_helper.h  aes_gcm_helper.h  (+78 more)
services/distributed/: BUILD.gn  libans_extension_service.map  libdans.map
services/infrastructure/: BUILD.gn
test/fuzztest/: BUILD.gn
tools/dump/: BUILD.gn
tools/ohos-notificationManager/: BUILD.gn  ohos-notificationManager.json
(+2251 files in other folders)
