# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# -fno-exceptions 独立 config（第一期定义但不引用，第二期 parse 改造后引用）
config("ans_no_exceptions_config") {
  cflags = [ "-fno-exceptions" ]
  defines = [ "JSON_NOEXCEPTION" ]
}

# -fvisibility=hidden 独立 config（公共库不加，其他 target 加）
config("ans_visibility_hidden_config") {
  cflags = [ "-fvisibility=hidden" ]
  cflags_cc = [ "-fvisibility-inlines-hidden" ]
}
